Fix timeline marker alignment using segment-based positioning
Replace PTS-based timestamps with segment sequence-based timeline
positions. The issue was that PTS timestamps don't align with the
cumulative segment durations used by HLS playback.

- Add sequence_to_offset_ns() to HotBuffer for accurate timeline offsets
- Update motion and detection API handlers to use segment sequences
- Add total_duration to API responses
- Remove unused timestamp_ns from detection store

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -49,6 +49,10 @@
                     Live
                 </button>
             </div>
+            <div id="detection-tooltip" hidden>
+                <img id="tooltip-image" alt="Detection frame">
+                <span id="tooltip-label"></span>
+            </div>
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@1"></script>
