--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -35,6 +35,7 @@
             </div>
             <div class="detail-video-wrapper">
                 <video id="detail-video" playsinline muted></video>
+                <canvas id="mask-overlay"></canvas>
                 <div id="detail-loading" class="loading"><p>Loading...</p></div>
             </div>
             <div class="timeline-controls">
@@ -44,6 +45,11 @@
                     <input type="range" id="timeline-scrubber" min="0" max="100" value="100" step="0.1">
                 </div>
                 <span id="duration" class="time-display">00:00:00</span>
+                <button id="mask-toggle-btn" class="mask-toggle-btn" title="Toggle motion mask overlay">
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"/>
+                    </svg>
+                </button>
                 <button id="live-btn" class="live-btn">
                     <span class="live-indicator"></span>
                     Live
