--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -45,6 +45,11 @@
                     <input type="range" id="timeline-scrubber" min="0" max="100" value="100" step="0.1">
                 </div>
                 <span id="duration" class="time-display">00:00:00</span>
+                <button id="mute-toggle-btn" class="mute-toggle-btn muted" title="Toggle audio">
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"/>
+                    </svg>
+                </button>
                 <button id="mask-toggle-btn" class="mask-toggle-btn" title="Toggle motion mask overlay">
                     <svg viewBox="0 0 24 24" fill="currentColor">
                         <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"/>
@@ -55,6 +60,7 @@
                     Live
                 </button>
             </div>
+            <div id="detection-gallery"></div>
             <div id="detection-tooltip" hidden>
                 <img id="tooltip-image" alt="Detection frame">
                 <span id="tooltip-label"></span>
