Add warm storage timeline scrubbing
- In-memory warm event index scanned from filesystem on startup,
  updated incrementally as WarmWriter persists new events
- Three new API endpoints: event listing with time range query,
  per-event VOD HLS playlist, and MPEG-TS segment streaming
- Frontend event strip with zoom levels (1h/6h/24h/48h),
  click-to-play warm events, and return-to-live button
- Serialize start_pts_ns as string to avoid JS integer precision
  loss on 19-digit nanosecond timestamps
- New warm files use .ts extension; index scanner accepts both
  .h264 and .ts for backward compatibility

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -38,6 +38,18 @@
                 <canvas id="mask-overlay"></canvas>
                 <div id="detail-loading" class="loading"><p>Loading...</p></div>
             </div>
+            <div class="event-strip-controls">
+                <div class="zoom-buttons">
+                    <button class="zoom-btn" data-hours="1">1h</button>
+                    <button class="zoom-btn" data-hours="6">6h</button>
+                    <button class="zoom-btn active" data-hours="24">24h</button>
+                    <button class="zoom-btn" data-hours="48">48h</button>
+                </div>
+                <div class="event-strip-wrapper">
+                    <canvas id="event-strip-canvas"></canvas>
+                </div>
+                <span id="event-strip-time" class="time-display"></span>
+            </div>
             <div class="timeline-controls">
                 <span id="current-time" class="time-display">00:00:00</span>
                 <div class="timeline-wrapper">
